fix video component on mobile version

--- a/src/pages/Photo_details/style.less
+++ b/src/pages/Photo_details/style.less
@@ -265,3 +265,19 @@
   }
   
 }
+
+.mobile.photo_details_row{
+  .mainPhoto {
+    position: relative;
+    width: 100% !important;
+    height: 100% !important;
+    top: 0 !important;
+    max-height: 500px;
+    min-width: 0px !important;
+    max-width: 100%;
+    border-radius: 20px;
+  }
+  .zoomImage{
+    height: 100% !important;
+  }
+}
